# guile-lib

./: .bzrignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen-support.sh  autogen.sh  configure.ac  dev-environ
PLUGIN/: REQ  options
doc/: ConceptIndex.texi  Copying.texi  FunctionIndex.texi  Makefile.am  Makefile.in  NamingConventions.texi  SourceMaterial.texi  base.css  container.queue.texi  docs.mk  guile-library.scm  guile-library.texi  logging.logger.texi  logging.port-log.texi  logging.rotating-log.texi  make-html.scm  make-texinfo.scm  math.minima.texi  math.primes.texi  mdate-sh  os.process.texi  release  search.basic.texi  stamp-vti  string.completion.texi  string.soundex.texi  string.transform.texi  string.wrap.texi  term.ansi-color.texi  texinfo.tex  version.texi  xml.ssax.texi
doc/PLUGIN/: REQ
doc/www/: base.css  index.scm  template.scm
doc/www/dev/: index.scm
doc/www/doc/: index.scm
doc/www/download/: index.scm
doc/www/news/: index.scm
examples/: Makefile.am  document-module.scm  sxw2words
new-doc/: Makefile.am  Makefile.in  README  fdl.texi  guile-library.scm  index.scm  make-texinfo.scm
new-doc/PLUGIN/: REQ
new-doc/html/: .arch-inventory
src/: Makefile.am  Makefile.in  apicheck.scm  htmlprag.scm  match-bind.scm  md5.scm  statprof.scm  texinfo.scm  unit-test.scm
src/config/: load.scm
src/container/: async-queue.scm  delay-tree.scm  nodal-tree.scm  queue.scm
src/debugging/: assert.scm  statprof.scm  time.scm
src/graph/: topological-sort.scm
src/io/: string.scm
src/logging/: logger.scm  port-log.scm  rotating-log.scm
src/math/: minima.scm  primes.scm  rationalize.scm
src/os/: process.scm
src/scheme/: documentation.scm  kwargs.scm  session.scm
src/search/: basic.scm
src/srfi/: srfi-34.scm  srfi-35.scm  srfi-40.scm
src/string/: completion.scm  soundex.scm  transform.scm  wrap.scm
src/sxml/: apply-templates.scm  fold.scm  htmlprag.scm  simple.scm  ssax-simple.scm  ssax.scm  texinfo.scm  transform.scm  unicode.scm  xpath.scm
src/sxml/ssax/: input-parse.scm
src/sxml/texinfo/: html.scm  named-tree-nodes.scm
src/sxml/upstream/: SSAX-expanded.scm  SSAX.scm
src/term/: ansi-color.scm
src/texinfo/: docbook.scm  html.scm  nodal-tree.scm  plain-text.scm  reflection.scm  serialize.scm
src/text/: lex-simple.scm  parse-lalr.scm  structured.scm
src/text/structured/: gtk-text-buffer.scm  help.scm  html.scm  indexing.scm  named-tree-nodes.scm  plain-text.scm  texinfo.scm
src/unit-test/: guileUnit.scm
unit-tests/: Makefile.am  Makefile.in  all-tests.sh  api.scm  container.async-queue.scm  debugging.statprof.scm  file-header  graph.topological-sort.scm  guile-library.api  htmlprag.scm  logging.logger.scm  match-bind.scm  math.minima.scm  math.primes.scm  md5.scm  os.process.scm  scheme.kwargs.scm  search.basic.scm  srfi.srfi-35.scm  statprof.scm  string.completion.scm  string.transform.scm  string.wrap.scm  sxml.fold.scm  sxml.htmlprag.scm  sxml.ssax.scm  sxml.texinfo.scm  sxml.transform.scm  sxml.xpath.scm  term.ansi-color.scm  texinfo.docbook.scm  texinfo.scm  texinfo.serialize.scm  text.parse-lalr.scm  update-api
unit-tests/PLUGIN/: REQ
