scmdir=$(prefix)/share/guile/site

nobase_dist_scm_DATA = \
	apicheck.scm			\
	config/load.scm			\
	container/delay-tree.scm	\
	container/nodal-tree.scm	\
	container/queue.scm		\
	container/async-queue.scm	\
	debugging/assert.scm		\
	debugging/time.scm		\
	graph/topological-sort.scm	\
	htmlprag.scm			\
	io/string.scm			\
	logging/logger.scm		\
	logging/port-log.scm		\
	logging/rotating-log.scm	\
	math/minima.scm			\
	math/primes.scm			\
	match-bind.scm			\
	md5.scm				\
	os/process.scm			\
	scheme/documentation.scm	\
	scheme/kwargs.scm		\
	search/basic.scm		\
	statprof.scm			\
	string/completion.scm		\
	string/soundex.scm		\
	string/transform.scm		\
	string/wrap.scm			\
	sxml/apply-templates.scm	\
	sxml/fold.scm			\
	sxml/simple.scm			\
	sxml/ssax/input-parse.scm	\
	sxml/ssax.scm			\
	sxml/transform.scm		\
	sxml/unicode.scm		\
	sxml/upstream/SSAX-expanded.scm	\
	sxml/upstream/SSAX.scm		\
	sxml/upstream/SXML-tree-trans.scm \
	sxml/upstream/SXPath-old.scm	\
	sxml/upstream/input-parse.scm	\
	sxml/upstream/packages.scm	\
	sxml/upstream/assert.scm	\
	sxml/xpath.scm			\
	sxml/ssax-simple.scm		\
	term/ansi-color.scm		\
	texinfo/docbook.scm		\
	texinfo/html.scm		\
	texinfo/indexing.scm		\
	texinfo/nodal-tree.scm		\
	texinfo/plain-text.scm		\
	texinfo/reflection.scm		\
	texinfo/serialize.scm		\
	texinfo.scm			\
	text/parse-lalr.scm		\
	unit-test.scm
